objects/Error_Message_Metadata__mdt.object
<CustomObject>
    <description>Error messages from interfaces</description>
    <fields>
        <fullName>error_code__c</fullName>
        <label>error_code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>profile_role__c</fullName>
        <label>profile_role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Error Message</label>
    <pluralLabel>Error Messages</pluralLabel>
</CustomObject>